--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 /build/
 /error.log
 /adb808b6-1005-416e-a627-5bffebf074bc/result.json
+/base_1c/1Cv8.1CD.cfl
+/base_1c/1Cv8.1CL
+/base_1c/1Cv8.1CL.cfl
+/base_1c/1Cv8.cgr
+/base_1c/1Cv8.cgr.cfl
+/base_1c/1Cv8tmp.1CD
+/base_1c/1Cv8tmp.1CD.cfl
+/base_1c/1Cv8tmp.1CL
+/base_1c/1Cv8tmp.1CL.cfl
+/base_1c/1Cv8JobScheduler/
+/base_1c/1Cv8Log/
